--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
     "prettier": "2.1.2",
