Added cookiepolicy banner

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.28.1",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-feed": "^2.9.0",
+    "gatsby-plugin-gdpr-cookies": "^1.0.11",
     "gatsby-plugin-google-analytics": "^2.7.0",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.1.14",
     "prismjs": "^1.22.0",
     "react": "^16.14.0",
+    "react-cookie-consent": "^6.2.1",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "typeface-merriweather": "0.0.72",
