--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-feed": "^2.9.0",
     "gatsby-plugin-gdpr-cookies": "^1.0.11",
     "gatsby-plugin-google-analytics": "^2.7.0",
+    "gatsby-plugin-google-gtag": "^2.4.0",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-postcss": "^3.3.0",
