--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "gatsby-plugin-gdpr-cookies": "^1.0.11",
     "gatsby-plugin-google-analytics": "^2.7.0",
     "gatsby-plugin-google-gtag": "^2.4.0",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-postcss": "^3.3.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-sharp": "^2.10.1",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-plugin-sitemap": "^2.8.0",
     "gatsby-remark-copy-linked-files": "^2.6.0",
     "gatsby-remark-images": "^3.7.0",
     "gatsby-remark-prismjs": "^3.9.0",
     "gatsby-remark-responsive-iframe": "^2.7.0",
     "gatsby-remark-smartypants": "^2.6.0",
-    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.12.0",
-    "gatsby-transformer-sharp": "^2.8.0",
+    "gatsby-transformer-sharp": "^2.12.1",
     "postcss": "^8.1.14",
     "prismjs": "^1.22.0",
     "react": "^16.14.0",
